@@ -120,7 +120,7 @@ public class PackagerBlockEntity extends BaseBlockEntity {
 		if(currentPattern == null) {
 			return false;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return false;
 		}
@@ -166,7 +166,7 @@ public class PackagerBlockEntity extends BaseBlockEntity {
 		if(powered) {
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return;
 		}
@@ -201,7 +201,7 @@ public class PackagerBlockEntity extends BaseBlockEntity {
 			endProcess();
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			endProcess();
 			return;
