@@ -116,7 +116,7 @@ public class PackagerExtensionBlockEntity extends BaseBlockEntity {
 		if(currentPattern == null) {
 			return false;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return false;
 		}
@@ -162,7 +162,7 @@ public class PackagerExtensionBlockEntity extends BaseBlockEntity {
 		if(powered) {
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			return;
 		}
@@ -231,7 +231,7 @@ public class PackagerExtensionBlockEntity extends BaseBlockEntity {
 			endProcess();
 			return;
 		}
-		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).collect(Collectors.toList());
+		List<ItemStack> input = itemHandler.getStacks().subList(0, 9).stream().filter(stack->!stack.isEmpty()).toList();
 		if(input.isEmpty()) {
 			endProcess();
 			return;
